# elastic-AI.protocol

./: .commitlintrc.js  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PROTOCOL.md  README.md  eai_protocol_init.cmake  package-lock.json  package.json  pyproject.toml
.github/workflows/: push_to_main.yml  run_checks.yml
C/: CONTRIBUTION.md  README.md
C/src/communicationEndpoint/include/public/eaip/endpoint/: CommunicationEndpoint.h
C/src/protocol/: Protocol.c
C/src/protocol/include/private/eaip/protocol/: Parser.h
C/src/protocol/include/public/eaip/protocol/: Protocol.h
C/src/utils/brokerMock/: Broker.c  CMakeLists.txt
C/src/utils/brokerMock/include/public/eaip/brokerMock/: Broker.h
C/test/: test_brokerMock.c  test_protocol.c
Python/: CONTRIBUTION.md  README.md
Python/elasticai/: IPubSubClient.py  Protocol.py  __init__.py
Python/elasticai-stubs/protocol/: __init__.pyi  base.pyi  client_interface.pyi  data_requester.pyi  exceptions.pyi
Python/elasticai/protocol/: __init__.py  base.py  data_requester.py  exceptions.py
Python/mqtt/: __init__.py  client.py
Python/mqtt-stubs/: client.pyi
Python/tests/: __init__.py
Python/tests/unit-tests/: __init__.py  protocol_test.py
Python/tests/units/: client_unit_test.py  protocol_unit_test.py
cmake/: third_party_deps.cmake
src/communicationEndpoint/: CMakeLists.txt
src/protocol/: CMakeLists.txt  Parser.c  Protocol.c
src/utils/brokerMock/: Broker.c
test/: CMakeLists.txt  test_brokerMock.c  test_protocol.c
